k3s/cluster/applications/memcached/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      automountServiceAccountToken: false
      containers:
        - name: memcached
          image: memcached:1.6.45@sha256:75c93cc91e76853da7c029e74d6e8dbd44774dd3713c93be8cd1971ad26120a4
          args:
            - --memory-limit=256
            - --conn-limit=1024
            - --threads=4
          startupProbe:
            tcpSocket:
              port: memcached
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 180
          readinessProbe:
            tcpSocket:
              port: memcached
            periodSeconds: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 11211
              name: memcached
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  type: ClusterIP
  ports:
    - port: 11211
      targetPort: 11211
      protocol: TCP
      name: memcached
  selector:
    app: memcached
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: memcached-policy
spec:
  podSelector:
    matchLabels:
      app: memcached
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: seafile
      ports:
        - protocol: TCP
          port: 11211
